--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 sudo: false
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "iojs"
-after_script:
-  - npm run coveralls
+  - 'stable'
+  - '0.12'
+  - '0.10'
