--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "RESTful web API Documentation Generator for Gulp",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha test.js",
-    "coveralls": "node_modules/.bin/istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | node_modules/.bin/coveralls && rm -rf ./coverage"
+    "test": "xo && ava"
   },
   "repository": {
     "type": "git",
@@ -18,6 +17,9 @@
     "doc",
     "api"
   ],
+  "files": [
+    "index.js"
+  ],
   "author": "Sam Verschueren",
   "license": "MIT",
   "bugs": {
@@ -25,20 +27,16 @@
   },
   "homepage": "https://github.com/SamVerschueren/gulp-api-doc",
   "dependencies": {
-    "apidoc": "^0.12.1",
-    "del": "^1.1.1",
+    "apidoc": "^0.14.0",
     "file": "^0.2.2",
+    "file-exists": "^1.0.0",
     "gulp-util": "^3.0.4",
-    "through2": "^0.6.3"
+    "tempfile": "^1.1.1",
+    "through2": "^2.0.0"
   },
   "devDependencies": {
-    "chai": "^2.2.0",
-    "concat-stream": "^1.4.7",
-    "coveralls": "^2.11.2",
-    "gulp": "^3.8.11",
-    "istanbul": "^0.3.11",
-    "mocha": "^2.2.1",
-    "sinon": "^1.14.1",
-    "sinon-chai": "^2.7.0"
+    "ava": "*",
+    "globby": "^4.0.0",
+    "xo": "*"
   }
 }
