--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "gulp-api-doc",
   "version": "1.1.0",
   "description": "RESTful web API Documentation Generator for Gulp",
+  "license": "MIT",
+  "repository": "SamVerschueren/gulp-api-doc",
+  "author": "Sam Verschueren",
   "main": "index.js",
+  "engines": {
+    "node": ">=0.10"
+  },
   "scripts": {
     "test": "xo && ava"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SamVerschueren/gulp-api-doc.git"
-  },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "apidoc",
     "gulp",
@@ -17,15 +22,6 @@
     "doc",
     "api"
   ],
-  "files": [
-    "index.js"
-  ],
-  "author": "Sam Verschueren",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SamVerschueren/gulp-api-doc/issues"
-  },
-  "homepage": "https://github.com/SamVerschueren/gulp-api-doc",
   "dependencies": {
     "apidoc": "^0.14.0",
     "file": "^0.2.2",
@@ -35,8 +31,8 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
-    "ava": "*",
+    "ava": "0.17.0",
     "globby": "^4.0.0",
-    "xo": "*"
+    "xo": "0.16.0"
   }
 }
