--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Sam Verschueren",
   "main": "index.js",
   "engines": {
-    "node": ">=0.10"
+    "node": ">=4"
   },
   "scripts": {
     "test": "xo && ava"
@@ -31,8 +31,8 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
-    "ava": "0.17.0",
+    "ava": "*",
     "globby": "^4.0.0",
-    "xo": "0.16.0"
+    "xo": "*"
   }
 }
