--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "dependencies": {
     "apidoc": "^0.17.5",
     "file": "^0.2.2",
-    "file-exists": "^1.0.0",
     "gulp-util": "^3.0.4",
+    "path-exists": "^3.0.0",
     "tempfile": "^1.1.1",
     "through2": "^2.0.0"
   },
